--- a/index.html
+++ b/index.html
@@ -277,6 +277,22 @@
   </div>
 </section>
 
+<div class="share-bar">
+          <a href="https://wa.me/?text=https://festeiros2005.pt" target="_blank" class="share-icon whatsapp">
+            <i class="bi bi-whatsapp"></i>
+          </a>
+          <a href="https://www.facebook.com/sharer/sharer.php?u=https://festeiros2005.pt" target="_blank" class="share-icon facebook">
+            <i class="bi bi-facebook"></i>
+          </a>
+          <a href="https://m.me/?text=https://festeiros2005.pt" target="_blank" class="share-icon messenger">
+            <i class="bi bi-messenger"></i>
+          </a>
+          <a href="https://www.instagram.com/?url=https://festeiros2005.pt" target="_blank" class="share-icon instagram">
+            <i class="bi bi-instagram"></i>
+          </a>
+  
+          </div>
+          
   <!-- If {video}:
 
 <section data-bs-version="5.1" class="video05 cid-uHSKsATDc7 mbr-parallax-background" id="video05-4">
@@ -377,40 +393,17 @@
 </html>'>
 </iframe>
 
-<!-- Combined Share Bar + Footer Section -->
-<footer class="mbr-section footer1 cid-tIsjhWS5IM" id="footer1-2" style="position: relative; overflow: hidden; background: #000;">
-  <!-- Overlay -->
-  <div class="overlay" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); z-index: 1;"></div>
-
-  <!-- Content Container -->
-  <div class="container-fluid" style="position: relative; z-index: 2;">
-    <!-- Share Bar -->
-    <div class="share-bar d-flex justify-content-center py-3">
-      <a href="https://wa.me/?text=https://festeiros2005.pt" target="_blank" class="share-icon whatsapp mx-2">
-        <i class="bi bi-whatsapp fs-3 text-white"></i>
-      </a>
-      <a href="https://www.facebook.com/sharer/sharer.php?u=https://festeiros2005.pt" target="_blank" class="share-icon facebook mx-2">
-        <i class="bi bi-facebook fs-3 text-white"></i>
-      </a>
-      <a href="https://m.me/?text=https://festeiros2005.pt" target="_blank" class="share-icon messenger mx-2">
-        <i class="bi bi-messenger fs-3 text-white"></i>
-      </a>
-      <a href="https://www.instagram.com/?url=https://festeiros2005.pt" target="_blank" class="share-icon instagram mx-2">
-        <i class="bi bi-instagram fs-3 text-white"></i>
-      </a>
-    </div>
-
-    <!-- Copyright -->
-    <div class="row">
-      <div class="col-12 text-center">
-        <p class="mbr-text mbr-fonts-style display-4 text-white fw-bold mb-0" style="font-size: 24px;">
-          © festeiros2005.pt 2025
-        </p>
-      </div>
-    </div>
-  </div>
-</footer>
-
+<footer class="mbr-section footer1 cid-tIsjhWS5IM" id="footer1-2" style="position: relative; overflow: hidden;">
+        <div class="overlay" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); z-index: 1;"></div>
+        <div class="container-fluid" style="position: relative; z-index: 2;">
+            <div class="row">
+                <div class="col-12 text-center">
+                <p class="mbr-text mbr-fonts-style display-4" style="color: white; font-weight: bold; font-size: 24px;">
+                    Copyright festeiros2005.pt 2025 </span>
+                  </div>
+              </div>
+          </div>       
+      </footer>
                  
 <!-- core scripts -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
